--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,24 +4,31 @@ head
   meta(name='viewport', content='width=device-width, initial-scale=1.0,user-scalable=no')
   meta(http-equiv='X-UA-Compatible', content='ie=edge')
   link(rel='shortcut icon', href='./img/favicon.png')
-  title EuPassarinho
+  title Eu Passarinho - Eles passarão, eu passarinho 
 body
   .grid
     header.header      
-      h1 EuPassarinho
-
-    sidebar.left
-      picture.left__logo
-        img(src='./img/logo.png', alt='logo EuPassarinho')
-      ul.left__menu
-        li Olá
-        li Projeto
-        li Poesia
-        li Palhaçaria
-        li Cursos
+      ul.header__menu
+        li 
+          a(class='button' href='http://www.facebook.com/eupassarin') Facebook
+        li 
+          a(class='button' href='http://www.instagram.com/jeffvasques_eupassarinho') Instagram
+        li 
+          a(class='button' href='https://www.youtube.com/channel/UC2BHU9a0-7tVnr64-7qtoMw') Youtube  
         li Contato
 
     main.content
+      sidebar.content__left
+        picture.content__left__logo
+          img(src='./img/logo.png', alt='logo EuPassarinho')
+        ul.content__left__menu
+          li Olá
+          li Projeto
+          li Poesia
+          li Palhaçaria
+          li Cursos
+          li Contato
+      
       article.content__article
         h1 O voo
         p Ensinado por Martí de que “pátria é humanidade”, venho desde 2017 avoando pelo continente na minha Kombi “La poderosa III”, redescobrindo as Américas, sonhando a Pátria Grande que já existe em germe nas lutas comuns, na solidariedade de classe, na arte popular de rua e de luta. Quero revelar, para mim e pra todo o bando que me acompanha, uma América profunda, sem fronteiras em sua rebeldia e sonhos coletivos, terra que nos emana e irmana.
@@ -37,12 +44,17 @@ body
         p O nome “Eupassarinho” nasce dos famosos versos de Quintana (“Todos estes que aí estão / Atravancando o meu caminho, / Eles passarão. / Eu passarinho!”) que condensam, pra mim, a importância de não só negar a realidade de exploração e opressão que nos “atravancam os caminhos” latinoamericanos e mundiais, mas, simultaneamente, afirmar uma nova sociabilidade, sem fronteiras, radicalmente comum e livre.
 
     sidebar.right
-      ul.right__menu-blog
-        li Item 1
-        li Item 2
-      ul.right__menu-poesia
-        li Item 1
-        li Item 2
+      .right__menu-blog
+        h4 Blog
+        ul.right__menu-blog-list
+          li Item 1
+          li Item 2
+
+      .right__menu-poesia
+        h4 Poesias de Luta
+        ul.right__menu-poesia-list
+          li Item 1
+          li Item 2
 
     footer.footer
       p Website by Denis Forigo
