--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -19,6 +19,14 @@ body {
   margin: 0 auto;
 }
 
+ul {
+  padding: 0rem 1rem 0 0;
+  li {
+    display: inline-block;
+    padding: 1rem 0.5rem;
+  }
+}
+
 %responsive-img {
   max-width: 100%;
   height: auto;
