--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -9,10 +9,23 @@ head
 body
   .grid
     block header
-        header.header      
-            ul.header__menu
+        header.header
+            block sidebar
+                picture.header__logo
+                    img(src='./img/logo.png', alt='logo EuPassarinho', width="150", height='150')
+                    
+                mixin link(href, name)
+                    - var active = title= htmlWebpackPlugin.options.title
+                    
+                    li
+                        a(href=href, class={active: name === active})= name 
+                ul.header__menu__left
+                    -
+                    each val, index in {"index.html": "Olá!","projeto.html": "Projeto","poesia.html": "Poesia","palhacaria.html": "Palhaçaria","cursos.html": "Cursos","Contato.html": "Contato"}
+                        +link(index, val)
+            ul.header__menu__right
                 li 
-                    a(class='button' href='http://www.facebook.com/eupassarin') Facebook
+                    a(class='button', href='http://www.facebook.com/eupassarin')                        Facebook
                 li 
                     a(class='button' href='http://www.instagram.com/jeffvasques_eupassarinho') Instagram
                 li 
@@ -21,54 +34,16 @@ body
 
     block content
         main.content
-            block sidebar
-                sidebar.content__sidebar
-                    picture.content__sidebar__logo
-                        img(src='./img/logo.png', alt='logo EuPassarinho')
-                    
-                    mixin link(href, name)
-                        - var active = title= htmlWebpackPlugin.options.title
-                        
-                        li
-                            a(href=href, class={active: name === active})= name 
-                    ul.content__sidebar__menu
-                        -
-                        each val, index in {"index.html": "Olá!","projeto.html": "Projeto","poesia.html": "Poesia","palhacaria.html": "Palhaçaria","cursos.html": "Cursos","Contato.html": "Contato"}
-                            +link(index, val)
+            
                                 
             block article
-                article.content__article
-                    header.content__article__header
-                        h3 O voo
-                    p Ensinado por Martí de que “pátria é humanidade”, venho desde 2017 avoando pelo continente na minha Kombi “La poderosa III”, redescobrindo as Américas, sonhando a Pátria Grande que já existe em germe nas lutas comuns, na solidariedade de classe, na arte popular de rua e de luta. Quero revelar, para mim e pra todo o bando que me acompanha, uma América profunda, sem fronteiras em sua rebeldia e sonhos coletivos, terra que nos emana e irmana.
-                    
-                    p Um certo Ernesto, ao organizar suas notas da viagem, escreveu: “A pessoa que está agora reorganizando e polindo estas mesmas notas, eu, não sou mais, pelo menos não sou o mesmo que era antes. Esse vagar sem rumo pelos caminhos de nossa Maiúscula América me transformou mais do que eu me dei conta.”. Busco esse “vagar” que me revele como hispano-americano, como filho dessa Pátria Grande. Muito mais que o desejo de conhecer paisagens novas, o que me move é o contato com a realidade de nossa américa em movimento e, assim, possa me fincar em raízes coletivas profundas, afiando minha arte e me forjando cada vez mais na “primeira e profunda pessoa do plural”.
-
-                    p Este vôo começou no Brasil e percorrerá os países de “nuestra américa” até o México, sem rota fixa. O objetivo é compreender melhor a história de luta de cada povo, suas contradições atuais, seus movimentos políticos, sua arte popular e em luta. Nesse vôo, busco estabelecer pontes, conectar revoadas de artistas, de lutadores, de artistas-lutadores. Todas essas descobertas serão compartilhadas pelo site em forma de textos, poesias, fotos e vídeos.
-
-                    p Me sustentam nesse vôo as asas das artes (poesia e palhaçaria) e da formação política. Com essas atividades espero me manter, além de realizar trabalhos pontuais de revisão de texto, que já realizo há algum tempo.
-
-                    p Conto também com a colaboração de todes aqueles que queiram incentivar e participar de alguma forma desse vôo, mesmo à distância: seja contribuindo voluntariamente com o projeto, comprando artesanias por este site, ou contratando meu trabalho de revisão de texto (sou formado em Letras e trabalho com isso há muito tempo). Se você se identifica com esse vôo, entre em contato, faça parte do bando, ofereça um pouso, sugira uma rota, um movimento, um encontro.
-
-                    p O nome “Eupassarinho” nasce dos famosos versos de Quintana (“Todos estes que aí estão / Atravancando o meu caminho, / Eles passarão. / Eu passarinho!”) que condensam, pra mim, a importância de não só negar a realidade de exploração e opressão que nos “atravancam os caminhos” latinoamericanos e mundiais, mas, simultaneamente, afirmar uma nova sociabilidade, sem fronteiras, radicalmente comum e livre.
-
 
     block right
         sidebar.right
-            .right__menu-blog
-                h4 Blog
-                ul.right__menu-blog-list
-                    li Item 1
-                    li Item 2
+            .right__menu
+                
 
-            .right__menu-poesia
-                h4 Poesias de Luta
-                form.search
-                    input(class="search__field", placeholder="Procure uma poesia")
-                    button(class="btn search__btn")
-                        span Busca
-                .results
-                    ul.results__list.right__menu-poesia-list
+                
         
     //block footer
         footer.footer
