--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,5 +1,37 @@
 extends layout.pug
 block article
     article.content__article
-        h3 O voo
-        p Ensinado por Martí de que “pátria é humanidade”, venho desde 2017 avoando pelo continente na minha Kombi “La poderosa III”, redescobrindo as Américas, sonhando a Pátria Grande que já existe em germe nas lutas comuns, na solidariedade de classe, na arte popular de rua e de luta. Quero revelar, para mim e pra todo o bando que me acompanha, uma América profunda, sem fronteiras em sua rebeldia e sonhos coletivos, terra que nos emana e irmana.
+        header.content__article__header
+            h2 #{htmlWebpackPlugin.options.title}
+        .content__article__tab
+            .content__article__tab__header        
+                button#defaultOpen.tablink(onclick="openPage('insta', this)") instagram
+                button.tablink(onclick="openPage('blog', this)") blog
+                button.tablink(onclick="openPage('poesiadeluta', this)") poesia de luta
+                
+            .content__article__tab__content
+                #insta.tabcontent
+                    form.search
+                        input(class="search__field", style="display:none",placeholder="Procure uma post")
+                        button(class="btn search__btn", style="display:none")
+                            span Busca
+                    .results
+                        .results__list.card-columns
+                        .results__pages
+                #blog.tabcontent                   
+                    form.search
+                        input(class="search__field", placeholder="Procure uma post")
+                        button(class="btn search__btn")
+                            span Busca
+                    .results
+                        .results__list.card-columns
+                        .results__pages
+                        
+                #poesiadeluta.tabcontent
+                    form.search
+                        input(class="search__field", placeholder="Procure uma poesia")
+                        button(class="btn search__btn")
+                            span Busca
+                    .results
+                        .results__list.card-columns
+                        .results__pages
