--- a/src/templates/palhacaria.pug
+++ b/src/templates/palhacaria.pug
@@ -18,49 +18,45 @@ block article
                         p Depois de um longo período hibernando, Magrólhos renasce das cinzas com o “desespetáculo” solo de rua “Circo da Miséria”, que aborda a vida da população em situação de rua. É com este trabalho, com o palhaço-vagabundo, que venho rodando e me aprimorando.
                 #circo.tabcontent
                     .row
-                        .col-1-of-3
+                        .col-1-of-2
                             img.img-responsive(src='http://www.eupassarinho.org/wp-content/uploads/2015/09/MG_6909.jpg', alt='Magrólios no Circo da Miséria')
-                        .col-2-of-3
+                            .row
+                                
+                                .col-2-of-2
+                                    h3 Ficha t&eacute;cnica
+                                    
+                                    p Cria&ccedil;&atilde;o e atua&ccedil;&atilde;o: 
+                                        strong Jeff Vasques
+                                    
+                                    p Orienta&ccedil;&atilde;o: 
+                                    
+                                        strong Luciane Olendski
+                                    
+                                    p Assistente de dire&ccedil;&atilde;o: 
+                                    
+                                     strong Taiane Raffa
+                                    
+                                    p Figurino: 
+                                    
+                                        strong &Acirc;ngela Sauerbronn
+                                    
+                                    p Fotografia: 
+                                        strong Natasha Mota 
+                                    
+                                    p Projeto gr&aacute;fico: 
+                                    
+                                        strong Denis Forigo
+                            .row
+                                .col-1-of-2
+                                    h3 Apoio
+                                    p Centro Pop
+                                    p 8&ordf; Mostra Luta
+                                    p CAC Hortol&acirc;ndia
+                                    p Casa de Cultura Tain&atilde;
+                                .col-1-of-2
+                                    h3 Patroc&iacute;nio
+                                    p
+                                        a(href='http://www.eupassarinho.org/wp-content/uploads/2015/09/Logo_novotempo-cultura-ficc.jpg')
+                                        img.img-responsive(src='http://www.eupassarinho.org/wp-content/uploads/2015/09/Logo_novotempo-cultura-ficc-300x114.jpg', alt='Logo_novotempo+cultura+ficc', width='300', height='114')
+                        .col-1-of-2
                             p  No espet&aacute;culo de palha&ccedil;o &ldquo;Circo da Mis&eacute;ria&rdquo;, Jeff Vasques, ou melhor, Magr&oacute;lhos, o protagonista desse grande cerco chamado &ldquo;mis&eacute;ria&rdquo;, chega a mais uma pra&ccedil;a como um saltimbanco em roupas surradas, carregando em seus bolsos fome e o p&oacute; das estradas. Chega como um mambembe, como mais um catador colhendo o que j&aacute; n&atilde;o tem serventia para lhes dar nova vida; enfim, chega como um palha&ccedil;o &ldquo;vagabundo&rdquo;, armando sua lona preta sob a qual dorme e sobre a qual levanta o picadeiro de sua luta di&aacute;ria por sobreviv&ecirc;ncia.O espet&aacute;culo &eacute; inspirado a partir do contato com a realidade da popula&ccedil;&atilde;o em situa&ccedil;&atilde;o de rua e na tradi&ccedil;&atilde;o dos palha&ccedil;os &ldquo;vagabundos&rdquo;, que tem em Carlitos, de Charles Chaplin, sua encarna&ccedil;&atilde;o mais famosa. Esses palha&ccedil;os usam da criatividade e de toda seu &ldquo;jeitinho esperto&rdquo; para garantirem o seu ganha-p&atilde;o, como abordado por Ant&ocirc;nio C&acirc;ndido em &ldquo;A dial&eacute;tica da malandragem&rdquo; e, eternizado, em figuras como Jo&atilde;o Grilo, no &ldquo;Auto da Compadecida&rdquo; de Ariano Suassuna.Ora provocando risos, ora comovendo, Magr&oacute;lhos convida os espectadores a adentrarem o maior desespet&aacute;culo da Terra e romperem o cerco que os imobiliza, convidando-os a oferecer a m&atilde;o, a compartirem indigna&ccedil;&atilde;o e solidariedade. Magr&oacute;lhos &eacute; o peregrino que todos, no fundo, somos, vagando a procura de humanidade nos restos e ru&iacute;nas de um mundo t&atilde;o desumano.
-                    .row
-                        .col-1-of-4
-                            h4.list-group-item-heading Apoio
-                            p.list-group-item
-                            strong Centro Pop
-                            p.list-group-item
-                            strong 8&ordf; Mostra Luta
-                            p.list-group-item
-                            strong CAC Hortol&acirc;ndia
-                            p.list-group-item
-                            strong Casa de Cultura Tain&atilde;
-                        .col-2-of-4
-                            h4.list-group-item-heading Ficha t&eacute;cnica
-                            .list-group-item
-                            p.list-group-item-text Cria&ccedil;&atilde;o e atua&ccedil;&atilde;o
-                            h4.list-group-item-heading
-                                strong Jeff Vasques
-                            .list-group-item
-                            p.list-group-item-text Orienta&ccedil;&atilde;o
-                            h4.list-group-item-heading
-                                strong Luciane Olendski
-                            .list-group-item
-                            p.list-group-item-text Assistente de dire&ccedil;&atilde;o
-                            h4.list-group-item-heading
-                                strong Taiane Raffa
-                            .list-group-item
-                            p.list-group-item-text Figurino
-                            h4.list-group-item-heading
-                                strong &Acirc;ngela Sauerbronn
-                            .list-group-item
-                            p.list-group-item-text Fotografia
-                            h4.list-group-item-heading
-                                strong Natasha Mota 
-                            .list-group-item
-                            p.list-group-item-text Projeto gr&aacute;fico
-                            h4.list-group-item-heading
-                                strong Denis Forigo
-                        .col-3-of-4 
-                            h4.list-group-item-heading Patroc&iacute;nio
-                            p.list-group-item
-                            a(href='http://www.eupassarinho.org/wp-content/uploads/2015/09/Logo_novotempo-cultura-ficc.jpg')
-                                img.alignnone.size-medium.wp-image-44(src='http://www.eupassarinho.org/wp-content/uploads/2015/09/Logo_novotempo-cultura-ficc-300x114.jpg', alt='Logo_novotempo+cultura+ficc', width='300', height='114')
