Buscas funcionando no index.html

--- a/src/templates/cursos.pug
+++ b/src/templates/cursos.pug
@@ -6,7 +6,7 @@ block article
         .content__article__tab
             .content__article__tab__header        
                 button#defaultOpen.tablink(onclick="openPage('apresenta', this, 'white')") apresentação
-                button.tablink(onclick="openPage('cursos', this, 'white')") apresentação
+                button.tablink(onclick="openPage('cursos', this, 'white')") cursos
                 
             .content__article__tab__content
                 #apresenta.tabcontent
@@ -56,5 +56,3 @@ block article
                                         li Oficinas de leitura e produção poética
                                         li Oficinas/curso de comunicação popular
                                         li Oficinas/curso de educação popular
-
-                                        
