--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,6 +8,7 @@ block article
                 button#defaultOpen.tablink(onclick="openPage('insta', this)") instagram
                 button.tablink(onclick="openPage('blog', this)") blog
                 button.tablink(onclick="openPage('poesiadeluta', this)") poesia de luta
+                button.tablink(onclick="openPage('livros', this)") livros
                 
             .content__article__tab__content
                 #insta.tabcontent
@@ -26,8 +27,15 @@ block article
                     .results
                         .results__list.card-columns
                         .results__pages
-                        
                 #poesiadeluta.tabcontent
+                    form.search
+                        input(class="search__field", placeholder="Procure uma poesia")
+                        button(class="btn search__btn")
+                            span Busca
+                    .results
+                        .results__list.card-columns
+                        .results__pages
+                #livros.tabcontent
                     form.search
                         input(class="search__field", placeholder="Procure uma poesia")
                         button(class="btn search__btn")
